@@ -1,8 +1,11 @@
 package simutool.app;
 
+import java.awt.Desktop;
 import java.io.BufferedReader;
+import java.io.IOException;
 import java.io.InputStreamReader;
-import java.util.concurrent.BrokenBarrierException;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 import javax.annotation.PostConstruct;
 
@@ -19,18 +22,31 @@ import org.springframework.context.annotation.ComponentScan;
 import simutool.DBpopulator.InfluxPopulator;
 
 /**
- * Entry point
+ * Entry point. <br>
+ * Launches the app and all needed servers
  *
  */
 @ComponentScan(basePackages = "simutool")
 @EnableAutoConfiguration(exclude = {DataSourceAutoConfiguration.class, DataSourceTransactionManagerAutoConfiguration.class, HibernateJpaAutoConfiguration.class, MultipartAutoConfiguration.class})
 public class StartApp {
 
+	/**
+	 * Path to influxd.exe file
+	 */
 	@Value("${influxStarter}")
 	private String influxStarter;
-
+	
+	/**
+	 * Path to grafana-server.exe file
+	 */
 	@Value("${grafanaStarter}")
 	private String grafanaStarter;
+
+	/**
+	 * Path to the host where this Spring Boot app is running
+	 */
+	@Value("${server.port}")
+	private String springPort;
 
 	@Autowired
 	private InfluxPopulator influx;
@@ -40,14 +56,36 @@ public class StartApp {
 	}
 
 	/**
-	 * Launches influx database after server has been started
+	 * Launches grafana and influx servers after server has been started.
+	 * Each server is running in a separate thread
 	 */
 	@PostConstruct
 	public void serversStart() { 
 		Process influxProcess = null; 
 		Process grafanaProcess = null; 
 		try { 
-			influxProcess = Runtime.getRuntime().exec(influxStarter); 
+			Thread infl = new Thread() {
+				public void run() {
+					try {
+
+						ProcessBuilder builder = new ProcessBuilder(
+								"cmd.exe", "/K", "cd \"" + influxStarter + "\" && influxd.exe");
+						builder.redirectErrorStream(true);
+						Process p = builder.start();
+						BufferedReader r = new BufferedReader(new InputStreamReader(p.getInputStream()));
+						String line;
+						while (true) {
+							line = r.readLine();
+							if (line == null) { break; }
+							System.out.println(line);
+						}
+
+					} catch (Exception e) {
+						e.printStackTrace();
+					} 
+				}
+			};
+			infl.start();
 			influx.startInflux();
 		} 
 		catch(Exception e){ 
@@ -55,7 +93,7 @@ public class StartApp {
 			e.printStackTrace(); 
 		} 
 		try { 
-			String command1 = "cmd /c start cmd.exe /K  cd \"../src/github.com/grafana/grafana/bin\" && grafana-server.exe " ;
+			String command1 = "cmd /c start cmd.exe /K  cd \"" + grafanaStarter + "\" && grafana-server.exe " ;
 			System.out.println(command1);
 
 			Thread grafana = new Thread() {
@@ -63,7 +101,7 @@ public class StartApp {
 					try {
 
 						ProcessBuilder builder = new ProcessBuilder(
-								"cmd.exe", "/K", "cd \"..//src//github.com//grafana//grafana//bin\" && grafana-server.exe");
+								"cmd.exe", "/K", "cd \"" + grafanaStarter  +"\" && grafana-server.exe");
 						builder.redirectErrorStream(true);
 						Process p = builder.start();
 						BufferedReader r = new BufferedReader(new InputStreamReader(p.getInputStream()));
